# Stock-Market-Simulator

./: CMakeLists.txt  MainWindow.ui  Mainwindow.h  loginpage.ui  main.cpp  pages.cpp  pages.h  pages.ui
pages/: Page1.h  loginPage.cpp  loginPage.h  loginpage.ui
